@@ -1,3 +1,8 @@
+2011-06-17  Arjen Markus  <arjenmarkus@users.sourceforge.net>
+	* random.tcl: [Bug 3316478]: solve a few more bugs in the PRNG procedures
+	* random.test: added to get at least (very) basic confidence in the PRNG procedures
+	* pkgIndex.tcl: bumped version to 0.3 for "random"
+
 2011-06-16  Arjen Markus  <arjenmarkus@users.sourceforge.net>
 
 	* random.tcl: [Bug 3316478]: prng_Block was renamed to prng_Blocke - typo fixed; superfluous parenthesis removed
